assets/css/style.css
html,body,lable{
  font-weight: 100!important;
  font-family: arial!important;
}
input{
  text-transform: none!important;
}
#d-nodedsd{
  display: none;
}
.text-lowercase{
  text-transform: lowercase!important;
}
/*table header footer fixed*/
.table-scroll {
  position: relative;
  width:100%;
  z-index: 1;
  margin: auto;
  overflow: auto;
  height: 350px;
}
.table-scroll table {
  width: 100%;
  min-width: 1280px;
  margin: auto;
  border-collapse: separate;
  border-spacing: 0;
}
.table-wrap {
  position: relative;
}
.table-scroll th,
.table-scroll td {
  padding: 5px 10px;
  border: 1px solid #000;
  background: #fff;
  vertical-align: top;
}
.table-scroll thead th {
  color: #fff;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
}
/* safari and ios need the tfoot itself to be position:sticky also */
.table-scroll tfoot,
.table-scroll tfoot th,
.table-scroll tfoot td {
  position: -webkit-sticky;
  position: sticky;
  bottom: 0;
  color: #fff;
  z-index:4;
}
th:first-child {
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  z-index: 2;
}
thead th:first-child,
tfoot th:first-child {
  z-index: 5;
}
/*table header footer fixed*/


*{
  text-transform: capitalize!important;
}
.table-hf tr th{
  background: #4d89a7!important;
  color: #fff;
}
.table th,td{
  white-space: nowrap!important;
}
.input-group-btn:last-child>.btn, .input-group-btn:last-child>.btn-group{
  z-index: 0;
}
.main-footer{
  padding: 0px!important; 
  position: fixed;
  bottom: 0;
  width: 100%;
}
.main-footer p{
  margin: 0 0 0px!important;
}
.vdp-datepicker__calendar{
width: 228px!important;
}
  .datapick{
    display: flex;
  }
  .selebutton>div{
    margin:20px;
  }
  .mt-2{
    margin-top: 5px;
  }
  .content{
    min-height: 0px!important;
    padding-bottom: 0px!important;
  }
  .preload{
        position: absolute;
    top: 32%;
    left: 50%;
    width: 123px;
    height: 123px;
    background: transparent;
  }
  .main-sidebar{
      max-height: 97vh!important;
      overflow: scroll;
  }
  #newselladd{
    display: flex;
  }
  .sidebar-menu{
        margin-top: 31px;
  }
  #autosuggest__input {
      outline: none;
      position: relative;
      display: block;
      font-family: monospace;
      font-size: 20px;
      padding: 10px;
      width: 100%;
      box-sizing: border-box;
      -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
    }
    
    #autosuggest__input.autosuggest__input-open {
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
    }
    
    .autosuggest__results-container {
      position: relative;
      width: 100%;
    }
    
    .autosuggest__results {
      font-weight: 300;
      margin: 0;
      position: absolute;
      z-index: 10000001;
      width: 100%;
      border: 1px solid #e0e0e0;
      border-bottom-left-radius: 4px;
      border-bottom-right-radius: 4px;
      background: white;
      padding: 0px;
      overflow: scroll;
      max-height: 200px;
    }
    
    .autosuggest__results ul {
      list-style: none;
      padding-left: 0;
      margin: 0;
    }
    
    .autosuggest__results .autosuggest__results_item {
      cursor: pointer;
      padding: 15px;
    }
    
    #autosuggest ul:nth-child(1) > .autosuggest__results_title {
      border-top: none;
    }
    
    .autosuggest__results .autosuggest__results_title {
      color: gray;
      font-size: 11px;
      margin-left: 0;
      padding: 15px 13px 5px;
      border-top: 1px solid lightgray;
    }
    
    .autosuggest__results .autosuggest__results_item:active,
    .autosuggest__results .autosuggest__results_item:hover,
    .autosuggest__results .autosuggest__results_item:focus,
    .autosuggest__results .autosuggest__results_item.autosuggest__results_item-highlighted {
      background-color: #ddd;
    }

.purchace td{
  vertical-align: middle!important;
}
.font-weight-bold{
  font-weight: 700!important;
}
#user-availability-status1{color:#2FC332;}
#user-availability-status2{color:#D60202;}
.left{
  width: 275px;
}
.right{
  margin-left: 10px;width: 275px
}
.form-group{
  margin-bottom: 0px!important;
}
.content-wrapper{
  overflow: hidden!important;
  min-height: 94vh!important;
}
.close{
  font-size: 40px;
  color: red;
}
.table{
  background: #fff!important;
}
.sidebar-toggle{
  padding: 11px!important;
  font-size: 20px;
}
.logo-lg img{
  width: 143px!important;
    margin-top: -5px!important;
}
.has-error{
  border: 1px solid red!important;
}
tr,td,th{
    border: 1px solid #dee2e6!important;
    padding: 2px 10px!important;
  margin: 0px!important;
}
.btn-group-sm>.btn, .btn-sm{
      padding: 2px 6px;
}

